# solar-open2-experiments

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/git-checkpoint/: SKILL.md
.claude/skills/solar-ralph/: SKILL.md
docs/: AGENTS.md  experiment-log.md  index.md  log.md
docs/experiments/: experiment-log.md  index.md
docs/experiments/ralphthon/: RALPH_GOAL.md  checklist.md  ralph-deadline-watchdog.sh  solar-vs-codex-comparison.md  start-ralph-loop.sh
docs/guide/: claude-code-open2.md  getting-started.md  hermes-agent.md  index.md  okf-authoring.md  troubleshooting.md
docs/notes/: index.md
docs/notes/general-notes/: index.md  list.md  ralphthon-solar-comparison.md  ralphthon-spelling-correction.md
docs/notes/models/: index.md  list.md  solar-open2.md
docs/notes/notes/: index.md
docs/notes/papers/: index.md  list.md
docs/notes/people/: index.md  list.md
docs/notes/projects/: index.md  list.md
docs/notes/writing/: index.md  list.md
docs/reference/: index.md  solar-open2.md
docs/templates/: template-experiment.md  template-model.md  template-paper.md  template-person.md  template-project.md
projects/ralph-loop/: README.md
src/scripts/: setup-environment.sh
src/scripts/ralphthon/: compare.py  (+5 more)
tasks/01-ralphthon/: AGENTS.md  README.md
tasks/01-ralpthon/: AGENTS.md  README.md
tasks/02-meeting-minutes/: AGENTS.md  README.md
tasks/03-wiki-restructure/: AGENTS.md  README.md  pipeline.md  work-log.md
tasks/04-tokenizer-comparison/: AGENTS.md  README.md
tasks/05-ralphthon-spelling-evaluation/: EXECUTION_PLAN.md
(+116 files in other folders)
